# mjcom

./: .gitignore  pyproject.toml  start-gunicorn.sh  stop-gunicorn.sh  update-code-and-restart-server.sh
.github/workflows/: deploy.yaml
mjcom/: __init__.py
mjcom/static/: screen.css  style.css  whostyle.css
mjcom/static/interpreter/: Fedoradventure.gblorb.js  RYAN QUEST.gblorb.js
mjcom/templates/: __init__.py  categories.html  category.html  day.html  entry.html  home.html  month.html  old-entry.html  post_not_found.html  template.html  year.html
