[tool.poetry]
name = "mjcom"
version = "0.1.0"
description = ""
authors = ["Maxwell Joslyn <maxwelljoslyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
webint = ">=0.0"
webint-auth = ">=0.0"
webint-code = ">=0.0"
webint-data = ">=0.0"
webint-editor = ">=0.0"
webint-media = ">=0.0"
webint-owner = ">=0.0"
webint-posts = ">=0.0"

[[tool.poetry.source]]
name = "main"
url = "https://ragt.ag/code/pypi"


[tool.poetry.group.dev.dependencies]
gmpg = ">=0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
